feat(#15) Modification on icons for carto in fire hydrant

--- a/src/pages/fire-hydrant/fire-hydrant.scss
+++ b/src/pages/fire-hydrant/fire-hydrant.scss
@@ -26,6 +26,16 @@ page-fire-hydrant {
     width: 100%;
   }
 
+  .map-label span {
+    width: 80%;
+  }
+
+  .map-label ion-icon {
+    width: 20% !important;
+    text-align: right !important;
+    margin-right:1rem;
+  }
+
   .col {
     padding: 0px;
   }
