feat(#15) : Add validation on saving

--- a/src/pages/fire-hydrant/fire-hydrant.scss
+++ b/src/pages/fire-hydrant/fire-hydrant.scss
@@ -47,6 +47,15 @@ page-fire-hydrant {
   .text-input{
     text-align: right;
   }
+
+  .item-input ion-input{
+    margin:0px !important;
+  }
+
+  .left-align-input .text-input{
+    text-align: left;
+  }
+
 }
 
 
