feat(#15) : Add cartography for fire hydrant location

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,6 +17,7 @@
 //@import "../../node_modules/openlayers/css/ol";
 
 @import "../theme/icons";
+@import "../../node_modules/openlayers/css/ol";
 @import "../theme/action-sheets.scss";
 
 .validation-error-control {
