--- a/src/components/building-child-pictures/building-child-pictures.scss
+++ b/src/components/building-child-pictures/building-child-pictures.scss
@@ -4,7 +4,7 @@ building-child-pictures {
     right: 14px;
     background: white;
   }
-  button.brushIcon{
+  button.colorPaletteIcon{
     position: absolute;
     right: 60px;
     background: white;
