fix(#115) Switch brush and palette icons for Int. Plan

--- a/src/components/picture-viewer/picture-viewer.scss
+++ b/src/components/picture-viewer/picture-viewer.scss
@@ -16,7 +16,7 @@ picture-viewer {
     object-fit: contain;
   }
 
-  button.colorPaletteIcon{
+  button.brushIcon{
     position: absolute;
     right: 14px;
     background: white;
