fix(#115) CSS aplying outside edit-action-sheet

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,6 +17,7 @@
 //@import "../../node_modules/openlayers/css/ol";
 
 @import "../theme/icons";
+@import "../theme/action-sheets.scss";
 
 .validation-error-control {
   border-left: red 4px solid;
