--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,7 +17,7 @@
 //@import "../../node_modules/openlayers/css/ol";
 
 @import "../theme/icons";
-
+/*
 .validation-error-control {
   border-left: red 4px solid;
   border-bottom: red dotted thin;
@@ -59,7 +59,6 @@
     height: 55px;
     display: inline-block;
     border-radius: 20%;
-    //box-shadow: inset 0 0 10rem rgba(0,0,0,.25), 0 0 4rem rgba(255,255,255,.45);
     img {
       border-radius: 20%;
     }
@@ -86,7 +85,6 @@
       border-color: rgba(86, 61, 124, .1);
     }
     .item-icon {
-      //color: color($colors, caucaRed);
     }
   }
 }
@@ -94,7 +92,6 @@
 .page-header {
   .toolbar-background {
     background-color: color($colors, caucaRed);
-    //background-image: linear-gradient(135deg, color($colors, dark), color($colors, caucaRed));
   }
   .searchbar {
     background-color: gray;
@@ -120,24 +117,17 @@
 }
 
 .list-items {
-  /*.item:first-child {
-    border: none;
-  }*/
   .item:last-child {
     border: none;
   }
   .item-divider {
     background-color: #cbb677;
     color: black;
-/*    background-color: #737373;
-    color: whitesmoke;*/
   }
   .item-inner {
     border-color: rgba(86, 61, 124, .1);
   }
   .list-header {
-    /*background-color: #cbb677;
-    color: black;*/
     background-color: #737373;
     color: whitesmoke;
     border-color: rgba(86, 61, 124, .1);
@@ -172,3 +162,4 @@ ion-navbar ion-icon{
 .list-md{
   margin: 0px 0 16px;
 }
+*/
