--- a/src/pages/fire-hydrant/fire-hydrant.scss
+++ b/src/pages/fire-hydrant/fire-hydrant.scss
@@ -8,9 +8,9 @@ page-fire-hydrant {
     height: 20vh;
     border: 1px solid black;
     font-size: 1.5rem;
-    width: 100%;
+    width: 98%;
     padding: 5px;
-    margin:0px -5px !important;
+    margin: 10px 2px !important;
   }
 
   .custom-item-label {
@@ -54,6 +54,9 @@ page-fire-hydrant {
 
   .left-align-input .text-input{
     text-align: left;
+  }
+  .item-md [item-end] {
+    margin: 9px 8px 9px 18px !important;
   }
 
 }
