--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -12,13 +12,13 @@
     <ion-buttons>
       <button ion-button icon-start (click)="selectPicture()">
         <ion-icon class="footer-button-camera" name="image"></ion-icon>
-        {{'choose' | translate}}...
+        {{'choose' | translate}}
       </button>
     </ion-buttons>
     <ion-buttons end>
       <button ion-button icon-start (click)="takeNewPicture()" *ngIf="isUsingCordova">
         <ion-icon class="footer-button-camera" name="camera"></ion-icon>
-        {{'New' | translate}}...
+        {{'new' | translate}}
       </button>
     </ion-buttons>
     <input type="file" id="fileElem" #filePicker accept="image/*" style="display:none" (change)="onFileSelected($event);" />
