--- a/src/components/search-box/search-box.html
+++ b/src/components/search-box/search-box.html
@@ -1,4 +1,4 @@
-<button ion-item type="button" (click)="onPopSearch()" [class.validation-error-control]="hasValidationError">
+<button ion-item type="button" (click)="onPopSearch()" [class.validation-error-control]="hasValidationError" [disabled]="isDisabled">
   <ion-label item-start *ngIf="showDescription" fixed>{{description}}</ion-label>
   <ion-label item-end [class]="description != '' ? null : 'label-full-width'"><ion-spinner [style.display]="isLoading ? 'block' : 'none'" item-start></ion-spinner>{{selectedItemDescription}}</ion-label>
 </button>
