--- a/src/components/survey-question/survey-question.scss
+++ b/src/components/survey-question/survey-question.scss
@@ -1,3 +1,27 @@
 survey-question {
 
+  .question-title h2
+  {
+    text-align: left;
+    font-size: 22px;
+    font-weight: bold;
+
+  }
+  .question-title p
+  {
+    text-align: left;
+    font-size: 18px;
+    margin:5px;
+  }
+
+  textarea.text-input{
+    height: 20vh;
+    border: 1px solid black;
+    font-size: 15px;
+    width: 96%;
+    margin: 5px;
+  }
+
+
+
 }
