--- a/src/pages/inspection-survey-answer/inspection-survey-answer.scss
+++ b/src/pages/inspection-survey-answer/inspection-survey-answer.scss
@@ -1,30 +1,13 @@
 page-inspection-survey-answer {
 
-  .question-title h2
-  {
-    text-align: left;
-    font-size: 22px;
-    font-weight: bold;
-
-  }
-  .question-title p
-  {
-    text-align: left;
-    font-size: 18px;
-    width: 100%;
-  }
   .swiper-slide
   {
     text-align: left;
     webkit-align-items: initial;
     align-items: initial;
   }
-  textarea.text-input{
-    height:25vh;
-    border: 1px solid black;
-    font-size:15px;
-    width:95%;
-    padding:5px;
-  }
 
+.slides{
+    height:auto;
+  }
 }
