feat(#131) rename inspectionQuestion prefix for inspectionSurvey

--- a/src/components/parent-child-question/parent-child-question.html
+++ b/src/components/parent-child-question/parent-child-question.html
@@ -1,6 +1,6 @@
 <div>
     <div class="parent-question-title">
-        <h4>{{questions[0].title}}</h4>
+        <h4>{{questionTitle}}</h4>
         <div><ion-icon name="add-circle"></ion-icon></div>
     </div>
     <ion-card *ngFor="let question of answeredQuestions">
