Adapt question component for tree form data

--- a/src/components/parent-child-question/parent-child-question.html
+++ b/src/components/parent-child-question/parent-child-question.html
@@ -1,9 +1,11 @@
 <div>
     <div class="parent-question-title">
-        <h4>{{questionTitle}}</h4>
+        <h4>{{question.title}}</h4>
         <div><ion-icon name="add-circle"></ion-icon></div>
     </div>
-    <ion-card *ngFor="let question of answeredQuestions">
-        <survey-question [showTitle]="false" [question]="question" (questionAnswered)="showNextQuestion()"></survey-question>
+    <div  *ngFor="let question of answeredQuestions">
+    <ion-card>
+        <survey-question [showTitle]="false" [question]="question" (questionAnswered)="validateAnswer($event)"></survey-question>
     </ion-card>
+    </div>
 </div>
