--- a/src/components/parent-child-question/parent-child-question.scss
+++ b/src/components/parent-child-question/parent-child-question.scss
@@ -1,5 +1,5 @@
 parent-child-question {
-  ion-card {
+  .card.card-ios, .card.card-md {
     margin: 2px 2px 10px 2px;
     border-radius: 2px;
     font-size: 1.4rem;
