--- a/src/components/survey-question/survey-question.html
+++ b/src/components/survey-question/survey-question.html
@@ -7,20 +7,20 @@
     <ion-list radio-group [(ngModel)]=question.answer  *ngIf="question.choicesList.length <= 2">
       <ion-item *ngFor="let choice of question.choicesList">
         <ion-label>{{choice.description}}</ion-label>
-        <ion-radio [value]=choice.id (ionSelect)="ValidateAnswer"></ion-radio>
+        <ion-radio [value]=choice.id (ionSelect)="validateAnswer()"></ion-radio>
       </ion-item>
     </ion-list>
     <ion-item *ngIf="question.choicesList.length > 2">
-      <ion-select (ionChange)="ValidateAnswer" [(ngModel)]=question.answer>
+      <ion-select (ionChange)="validateAnswer()" [(ngModel)]=question.answer>
         <ion-option *ngFor="let choice of question.choicesList" value="{{choice.id}}">
           {{choice.description}}
         </ion-option>
       </ion-select>
     </ion-item>
   </div>
-  <ion-textarea [(ngModel)]=question.answer (ionChange)="ValidateAnswer"
+  <ion-textarea [(ngModel)]=question.answer (ionChange)="validateAnswer()"
                 *ngIf="question.questionType == 2"></ion-textarea>
   <ion-datetime displayFormat="YYYY/MM/DD" [(ngModel)]=question.answer
-                (ionChange)="ValidateAnswer"
+                (ionChange)="validateAnswer()"
                 *ngIf="question.questionType == 3"></ion-datetime>
 </div>
