--- a/src/components/parent-child-question/parent-child-question.html
+++ b/src/components/parent-child-question/parent-child-question.html
@@ -1,7 +1,7 @@
-<div>
+<div class="question-container">
     <div class="parent-question-title">
         <h4>{{question.title}}</h4>
-        <div><ion-icon name="add-circle" onclick="AddNewQuestionGroup()"></ion-icon></div>
+        <div><ion-icon name="trash" onclick="deleteQuestionGroup(question)"></ion-icon></div>
     </div>
     <div  *ngFor="let question of answeredQuestions">
     <ion-card>
