--- a/src/components/parent-child-question/parent-child-question.scss
+++ b/src/components/parent-child-question/parent-child-question.scss
@@ -1,4 +1,7 @@
 parent-child-question {
+  .question-container{
+    border: solid black 1px;
+  }
   .card.card-ios, .card.card-md {
     margin: 2px 2px 10px 2px;
     border-radius: 2px;
@@ -11,6 +14,7 @@ parent-child-question {
   .parent-question-title {
     display: table;
     width: 100%;
+    padding: 0px 5px 0px 5px;
   }
 
   .parent-question-title h4 {
@@ -18,10 +22,11 @@ parent-child-question {
     text-align: left;
     width: 80%;
     vertical-align: middle;
+    font-size:17px;
   }
 
   .parent-question-title div {
-    font-size:3.5rem;
+    font-size:2.7rem;
     text-align: right;
   }
 
