--- a/src/components/parent-child-question/parent-child-question.scss
+++ b/src/components/parent-child-question/parent-child-question.scss
@@ -1,6 +1,7 @@
 parent-child-question {
   .question-container{
     border: solid black 1px;
+    margin-bottom: 10px;
   }
   .card.card-ios, .card.card-md {
     margin: 2px 2px 10px 2px;
