--- a/src/components/parent-child-question/parent-child-question.html
+++ b/src/components/parent-child-question/parent-child-question.html
@@ -1,14 +1,16 @@
 <div class="question-container">
     <div class="parent-question-title">
-        <h4 (click)="hideExpandGroup()" >{{question.title}} # {{groupIndex+1}}</h4>
+        <h4 (click)="manageQuestionGroupDisplay()" >{{question.title}} # {{groupIndex+1}}</h4>
         <div>
             <ion-icon name="trash" (click)="deleteQuestionGroup(question)"></ion-icon>
         </div>
     </div>
     <div #questionGroup>
-        <div *ngFor="let question of answeredQuestions">
+        <div *ngFor="let q of answeredQuestions">
             <ion-card>
-                <survey-question [showTitle]="false" [question]="question"
+                <survey-question [showTitle]="false"
+                                 [question]="q"
+                                 [idParent]="answer.id"
                                  (questionAnswered)="validateAnswer($event)"></survey-question>
             </ion-card>
         </div>
