feat(#131) Use only one collection in parent-child component

--- a/src/components/parent-child-question/parent-child-question.html
+++ b/src/components/parent-child-question/parent-child-question.html
@@ -1,6 +1,6 @@
 <div class="question-container">
     <div class="parent-question-title">
-        <h4 (click)="manageQuestionGroupDisplay()" >{{question.title}} # {{groupIndex+1}}</h4>
+        <h4 (click)="manageQuestionGroupDisplay()" >{{answer.title}} # {{groupIndex+1}}</h4>
         <div>
             <ion-icon name="trash" (click)="deleteQuestionGroup(question)"></ion-icon>
         </div>
