--- a/src/components/survey-question/survey-question.html
+++ b/src/components/survey-question/survey-question.html
@@ -4,7 +4,7 @@
     <p>{{question.description}}</p>
   </div>
   <div *ngIf="question.questionType == questionTypeEnum.choiceAnswer">
-    <ion-list radio-group [(ngModel)]=answer  *ngIf="question.choicesList.length <= 2">
+    <ion-list radio-group [(ngModel)]=answer *ngIf="question.choicesList.length <= 2">
       <ion-item *ngFor="let choice of question.choicesList">
         <ion-label>{{choice.description}}</ion-label>
         <ion-radio [value]=choice.id (ionSelect)="validateAnswer()"></ion-radio>
@@ -18,7 +18,7 @@
       </ion-select>
     </ion-item>
   </div>
-  <ion-textarea [(ngModel)]=answer (ionChange)="textAnswerChanged()"
+  <ion-textarea [(ngModel)]=question.answer (ionChange)="textAnswerChanged()"
                 *ngIf="question.questionType == questionTypeEnum.textAnswer"></ion-textarea>
   <ion-datetime displayFormat="YYYY/MM/DD" [(ngModel)]=answer
                 (ionChange)="validateAnswer()"
