--- a/src/pages/inspection-survey-summary/inspection-survey-summary.scss
+++ b/src/pages/inspection-survey-summary/inspection-survey-summary.scss
@@ -30,6 +30,7 @@ page-inspection-survey-summary {
   }
 
   .non-recursive-item{
-    padding-left: 16px !important;
+    padding-left: 16px;
+    padding-bottom: 8px;
   }
 }
