--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -117,4 +117,35 @@ page-login {
   .fadeInDown {
     animation-name: fadeInDown;
   }
+
+  .version-warning{
+    display: table;
+    border:1px solid lightgrey;
+    width:100%;
+    font-weight: bold;
+  }
+
+  .version{
+    display: inline-flex;
+    width:100%;
+    border-bottom:1px solid lightgrey;
+    background-color: lightgrey;
+  }
+  .version-warning .version ion-icon{
+    display: table-cell;
+    font-size: 2.5em;
+    padding-left: 5px;
+    width:15%;
+  }
+  .version-warning .version ion-label{
+    text-align: left;
+    width: 85%;
+  }
+
+  .version-warning h5{
+    font-weight: bold;
+    color: #B32017;
+    text-align: center;
+    margin: 0.8rem;
+  }
 }
