feat(#154) : rename building-Child-pictures to pictures-manager

--- a/src/components/inspection-building-particular-risk-detail/inspection-building-particular-risk-detail.html
+++ b/src/components/inspection-building-particular-risk-detail/inspection-building-particular-risk-detail.html
@@ -37,6 +37,6 @@
   </ion-item-group>
 
   <ion-item-group>
-    <building-child-pictures [repo]="picRepo" formControlName="id"></building-child-pictures>
+    <pictures-manager [repo]="picRepo" formControlName="id"></pictures-manager>
   </ion-item-group>
 </ion-list>
