feat(#154) Rename building-child-pictures to only pictures component

--- a/src/components/inspection-building-particular-risk-detail/inspection-building-particular-risk-detail.html
+++ b/src/components/inspection-building-particular-risk-detail/inspection-building-particular-risk-detail.html
@@ -37,6 +37,6 @@
   </ion-item-group>
 
   <ion-item-group>
-    <pictures-manager [repo]="picRepo" formControlName="id"></pictures-manager>
+    <pictures [repo]="picRepo" formControlName="id"></pictures>
   </ion-item-group>
 </ion-list>
