feat(#154) Optimize pictures component to work for implantation plan

--- a/src/components/inspection-building-particular-risk-detail/inspection-building-particular-risk-detail.html
+++ b/src/components/inspection-building-particular-risk-detail/inspection-building-particular-risk-detail.html
@@ -37,6 +37,6 @@
   </ion-item-group>
 
   <ion-item-group>
-    <pictures [repo]="picRepo" formControlName="id"></pictures>
+    <pictures [repo]="picRepo" height="350px" formControlName="id"></pictures>
   </ion-item-group>
 </ion-list>
