Fix: change pictureData for dataUri.

--- a/src/components/pictures/pictures.component.html
+++ b/src/components/pictures/pictures.component.html
@@ -24,8 +24,8 @@
                             color="caucaRed">
                         <ion-icon name="brush" class="brushIcon"></ion-icon>
                     </button>
-                    <img class="selected-picture" [src]="getImageUrl(picture.pictureData)"
-                         *ngIf="hasImageUrl(picture.pictureData)" imageViewer/>
+                    <img class="selected-picture" [src]="getImageUrl(picture.dataUri)"
+                         *ngIf="hasImageUrl(picture.dataUri)" imageViewer/>
                 </ion-card>
             </ion-slide>
         </ion-slides>
