Feat(#357) Display 10 lines in the text-area and make scroll bar visible for devices.

--- a/src/components/inspection-building-particular-risk-detail/inspection-building-particular-risk-detail.html
+++ b/src/components/inspection-building-particular-risk-detail/inspection-building-particular-risk-detail.html
@@ -33,7 +33,7 @@
 
   <ion-item-group>
     <ion-item-divider>{{'comment' | translate}}</ion-item-divider>
-    <ion-textarea maxlength="500" formControlName="comments" placeholder="{{'commentHolder' | translate}}"></ion-textarea>
+    <ion-textarea maxlength="500" rows="10" formControlName="comments" placeholder="{{'commentHolder' | translate}}"  ></ion-textarea>
   </ion-item-group>
 
   <ion-item-group>
