Feat(#263) Change checkmark from white to gray.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -219,7 +219,7 @@ ion-navbar ion-icon{
 
   &.colorselected:before {
     content: '\2713';
-    color: white;
+    color: gray;
     z-index: 999999;
     width: 100%;
     height: 100%;
