--- a/src/components/inspection-building-particular-risk-detail/inspection-building-particular-risk-detail.html
+++ b/src/components/inspection-building-particular-risk-detail/inspection-building-particular-risk-detail.html
@@ -17,18 +17,8 @@
 
   <ion-item-group>
     <ion-item-divider color="light">{{'localization' | translate}}</ion-item-divider>
-    <ion-item>
-      <ion-label>{{'wall' | translate}}</ion-label>
-      <ion-select formControlName="wall" placeholder="{{'wall' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
-        <ion-option *ngFor="let wall of walls">{{wall}}</ion-option>
-      </ion-select>
-    </ion-item>
-    <ion-item>
-      <ion-label>{{'division' | translate}}</ion-label>
-      <ion-select formControlName="sector" placeholder="{{'division' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
-        <ion-option *ngFor="let sector of sectors">{{sector}}</ion-option>
-      </ion-select>
-    </ion-item>
+    <custom-select formControlName="wall" [dataSource]="walls" title="{{'wall' | translate}}"></custom-select>
+    <custom-select formControlName="sector" [dataSource]="sectors" title="{{'division' | translate}}"></custom-select>
   </ion-item-group>
 
   <ion-item-group>
