--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -158,4 +158,9 @@ page-login {
   .store-button button{
     background-color: #B32017;
   }
+
+  #version {
+    margin-top: 10%;
+    text-align: center;
+  }
 }
