Fix(#280) App version in menu header

--- a/src/components/menu-profile/menu-profile.html
+++ b/src/components/menu-profile/menu-profile.html
@@ -7,7 +7,7 @@
         </div>
       </ion-col>
             <ion-col>
-                <span ion-text class="text-white"><strong>SURVI</strong>-Prévention</span>
+                <span ion-text class="text-white"><strong>SURVI</strong>-Prévention <br> <strong>v{{version}}</strong> </span>
                 <h3 ion-text class="no-margin bold text-white">{{fullName}}</h3>
             </ion-col>
             <ion-col col-3>
