--- a/Ionic4/src/global.scss
+++ b/Ionic4/src/global.scss
@@ -9,3 +9,236 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+/*.user {
+    @extend %fa-icon;
+    @extend .fas;
+  
+    &:before {
+      content: fa-content($fa-var-user);
+    }
+  }*/
+  
+  .validation-error-control {
+    border-left: red 4px solid;
+    border-bottom: red dotted thin;
+  }
+  
+  .validation-error-text {
+    font-size: smaller;
+    color: red;
+  }
+  
+  .action-list-button{
+    background-color: transparent;
+    float:right;
+    font-size: 2.5rem;
+    line-height: 3.8rem;
+  }
+  
+  .invalid {
+    border-bottom: 1px solid #ea6153;
+  }
+  
+  .text-white {
+    color: #fff;
+  }
+  
+  .text-1x {
+    font-size: 1em;
+  }
+  
+  .text-menu {
+    font-size: 1em;
+    color: var(--ion-color-dark);
+  }
+  
+  .user-profile {
+    padding-top: calc(20px + 4px);
+    padding-top: calc(constant(safe-area-inset-top) + 4px);
+    padding-top: calc(env(safe-area-inset-top) + 4px);
+  
+    .user-avatar {
+      background-color: white;
+      width: 55px;
+      height: 55px;
+      display: inline-block;
+      border-radius: 20%;
+      img {
+        border-radius: 20%;
+      }
+    }
+    .toolbar-background {
+      background-image: linear-gradient(135deg, var(--ion-color-dark), var(--ion-color-primary));
+    }
+  
+    .other-data {
+      .column {
+        &:first-child {
+          border-right: 1px solid rgba(36, 50, 157, .25);
+        }
+      }
+    }
+  }
+  
+  .menu-items {
+    .item {
+      &:last-child {
+        border-bottom: 0;
+      }
+      .item-inner {
+        border-color: rgba(86, 61, 124, .1);
+      }
+      .item-icon {
+      }
+    }
+  
+  }
+  
+  .page-header {
+    .toolbar-background {
+      background-color: var(--ion-color-primary);
+    }
+    .searchbar {
+      background-color: gray;
+    }
+    .toolbar-title {
+      color: whitesmoke;
+    }
+    .back-button {
+      color: whitesmoke;
+    }
+    .bar-button {
+      color: whitesmoke;
+    }
+  }
+  
+  .page-footer {
+    .toolbar-background {
+      background-color: var(--ion-color-primary);
+    }
+    .bar-button {
+      color: whitesmoke;
+    }
+  }
+  
+  .list-items {
+    .item:last-child {
+      border: none;
+    }
+    ion-item-divider {
+      background-color: #cbb677;
+      color: black;
+    }
+    .item-inner {
+      border-color: rgba(86, 61, 124, .1);
+    }
+    .list-header {
+      background-color: #737373;
+      color: whitesmoke;
+      border-color: rgba(86, 61, 124, .1);
+    }
+  }
+  
+  .segment-themed {
+  
+    .segment-button {
+      border-color: #cbb677;
+      color: whitesmoke;
+    }
+  
+    .segment-button.segment-activated{
+      background-color: var(--ion-color-secondary);
+      color: black;
+      border-color: var(--ion-color-secondary);
+    }
+  }
+  
+  ion-textarea {
+    ::-webkit-scrollbar {
+      -webkit-appearance: none;
+    }
+  
+    ::-webkit-scrollbar:vertical {
+      width: 11px;
+    }
+  
+    ::-webkit-scrollbar:horizontal {
+      height: 11px;
+    }
+  
+    ::-webkit-scrollbar-thumb {
+      border-radius: 8px;
+      border: 2px solid white;
+      background-color: rgba(0, 0, 0, .5);
+    }
+  
+    ::-webkit-scrollbar-track {
+      background-color: #fff;
+      border-radius: 8px;
+    }
+  
+    .overflow-scroll {
+      overflow-y: auto !important;
+    }
+  }
+  
+  ion-navbar ion-icon{
+    padding-left: 10px;
+    font-size: 2em;
+  }
+  
+  [col-3]
+  {padding:0px;}
+  
+  .list-header-md{
+    margin-bottom:0px;
+    border-top:none;
+  }
+  .list-md{
+    margin: 0px 0 16px;
+  }
+  
+  .toolbar-ios ion-title{
+    padding: 0 70px 1px;
+  }
+  
+  //SELECT BOX WITH COLOR COLLECTION
+  .colorselect {
+    .select-text {
+      width: 75px;
+      border-radius: 5px;
+    }
+  
+    .alert-radio-inner,
+    .alert-radio-icon,
+    .alert-radio-label {
+      display: none;
+    }
+  
+    &.colorselected:before {
+      content: '\2713';
+      color: gray;
+      z-index: 999999;
+      width: 100%;
+      height: 100%;
+      font-size: 33px;
+      left: 50%;
+      top: 50%;
+      position: relative;
+      transform: translate(-50%);
+    }
+  
+    $colorsToSelect: "#000000" "#FFFFFF" "#6495ED" "#9ACD32" "#FFA500" "#FF0000" "#FFFF00" "#CB42F4";
+  
+    @each $colorOption in $colorsToSelect {
+      $colorWithoutHash: str-slice($colorOption, 2, 7);
+  
+      &.color_#{$colorWithoutHash} {
+        &, & .select-text {
+          color: #{$colorOption};
+          background-color: #{$colorOption};
+        }
+      }
+    }
+  }
